2010-09-01  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/decodercomponent.py:
	* flumotion/component/decoders/generic/generic.xml:
	Add the audiorate effect to the decoder's audio output.
	Completelly remove the deinterlace effect from the decoder.

2010-09-07  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: Andoni Morales

	* configure.ac:
	* flumotion/component/effects/Makefile.am:
	* flumotion/component/effects/audiorate:
	* flumotion/component/effects/audiorate/Makefile.am:
	* flumotion/component/effects/audiorate/__init__.py:
	* flumotion/component/effects/audiorate/audiorate.py:
	* flumotion/component/effects/audiorate/audiorate.xml:
	Add an effect to resample audio streams

2010-09-07  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/decoders/generic/generic.xml:
	Remove the deinterlace effect from the decoder for now

2010-09-07  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/test/test_wizard_save.py:
	Fix tests to work with the new default configuration

2010-09-07  Xavier Queralt  <xqueralt@flumotion.com>

	patch by: Hiroaki Kawai<kawai@iij.ad.jp>

	* flumotion/component/producers/firewire/wizard_gtk.py:
	Set the deinterlacing method to tomsmocomp instead of the mode.

2010-08-31  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/test/test_wizard_save.py:
	Fix tests to work with the new default configuration

2010-08-31  Xavier Queralt  <xqueralt@flumotion.com>

	* configure.ac:
	* pkg/ubuntu-karmic/changelog:
	* pkg/ubuntu-lucid/changelog:
	0.7.0.3 pre-release

2010-08-31  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: Andoni Morales

	* flumotion/component/producers/firewire/wizard_gtk.py:
	Default to gstreamer's deinterlace

2010-08-31  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: Andoni Morales

	* flumotion/component/producers/firewire/firewire.py:
	Set the name to the decoder so the effects can be plugged properly
